                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 17-09-2006 improved: handling of vobs/mpeg's with a nonzero start pts. (mplayer.dll)
 - 17-09-2006 fixed: rewind on some movies would just lock picture untill a fastforward request was made (mplayer.dll)
 - 17-09-2006 fixed: udp:// where not working in mplayer.dll, still no multicast support but atleast you can stream directly from vlc (mplayer.dll)
 - 17-09-2006 fixed: some videos would not display any time, but would still have totaltime and progress (mplayer.dll)
 - 17-09-2006 fixed: audio delay returned from audio renderer's where way of for mplayer when resampling it was resampling audio.
 - 17-09-2006 added: missing ::Exists function in CMusicDatabaseDirectory. fixes listings through httpapi.
 - 17-09-2006 fixed: mockup with dvd share context menus.
 - 17-09-2006 fixed: changing sort by in video title view crashed.
 - 17-09-2006 changed: flicker filter settings now shows off instead of level 0.
 - 17-09-2006 updated: German language file
 - 17-09-2006 updated: Swedish language file (Thnx to blittan)
 - 17-09-2006 updated: Dutch language file (Thnx to MrNice)
 - 17-09-2006 updated: Polish language file (Thnx to napek)
 - 17-09-2006 fixed: Last.FM didn't reset the timer when switching tracks.
 - 17-09-2006 fixed: Play from remote on a folder queued it then immediately paused the playback.
 - 16-09-2006 changed: potential fix for [ 1493993 ] Strange date behavior on FAT32 SMB shares. fallback to create date instead of modification date if missing
 - 16-09-2006 fixed: Music playlist could cache the playlist details to disk before the details were read.